--- a/work2/reports/03-methods/03.3-methods-reduction.tex
+++ b/work2/reports/03-methods/03.3-methods-reduction.tex
@@ -91,8 +91,8 @@ Then, it employs a decremental reduction procedure inspired by condensed nearest
 instances that do not affect the classification accuracy of their neighbors. This process results in a significantly 
 reduced dataset while aiming to preserve classification accuracy.
 
-DROP3 \cite{Wilson2000} is a hybrid instance reduction technique that combines the strengths of ENN and 
-Condensed Nearest Neighbor (CNN). It aims to achieve a more substantial reduction in the dataset size while 
+DROP3 is a hybrid instance reduction technique that combines the strengths of ENN and 
+Condensed Nearest Neighbor (CNN) \cite{Wilson2000}. It aims to achieve a more substantial reduction in the dataset size while 
 maintaining or improving classification accuracy.\\
 
 DROP3 operates in two main stages:
