--- a/work2/reports/tables/svm_knn_wilcoxon_comparison_hepatitis.tex
+++ b/work2/reports/tables/svm_knn_wilcoxon_comparison_hepatitis.tex
@@ -4,7 +4,7 @@
 \label{tab:svm_knn_wilcoxon_comparison_hepatitis}
 \begin{tabular}{lr}
 \toprule
-metric & p_value \\
+Metric & P Value \\
 \midrule
 F1 Score & 1.000 \\
 Train Time & 0.002 \\
