write about wilcoxon tests analysis in report

--- a/work2/reports/tables/knn_results_hepatitis.tex
+++ b/work2/reports/tables/knn_results_hepatitis.tex
@@ -6,16 +6,16 @@
 \toprule
  & Model Label & Mean F1 & Mean Train Time (s) & Mean Test Time (s) \\
 \midrule
-1 & k1ChebShpEq & 0.972618 & 0.000084 & 0.006925 \\
-2 & k1ChebMajEq & 0.972618 & 0.000085 & 0.006949 \\
-3 & k1ChebDisEq & 0.972618 & 0.000084 & 0.006896 \\
+1 & k1ChebDisEq & 0.972618 & 0.000084 & 0.006896 \\
+2 & k1ChebShpEq & 0.972618 & 0.000084 & 0.006925 \\
+3 & k1ChebMajEq & 0.972618 & 0.000085 & 0.006949 \\
 4 & k5EucShpEq & 0.969271 & 0.000084 & 0.009300 \\
 5 & k7EucShpEq & 0.969271 & 0.000083 & 0.009293 \\
-6 & k3ManShpEq & 0.969231 & 0.000083 & 0.007033 \\
-7 & k1ManMajEq & 0.969231 & 0.000120 & 0.007153 \\
+6 & k1EucShpEq & 0.969231 & 0.000084 & 0.009223 \\
+7 & k1EucMajRlf & 0.969231 & 0.000084 & 0.009360 \\
 8 & k1EucShpRlf & 0.969231 & 0.000084 & 0.009349 \\
-9 & k1ManShpEq & 0.969231 & 0.000083 & 0.006982 \\
-10 & k1EucMajEq & 0.969231 & 0.000086 & 0.009228 \\
+9 & k1EucDisEq & 0.969231 & 0.000085 & 0.009252 \\
+10 & k1ManDisEq & 0.969231 & 0.000083 & 0.006964 \\
 \bottomrule
 \end{tabular}
 \end{table}
