--- a/work2/reports/references.bib
+++ b/work2/reports/references.bib
@@ -259,3 +259,12 @@ title={An Euclidean Distance Based on Tensor Product Graph Diffusion Related Att
   year={2017}
 }
 
+@article{de2018wilcoxon,
+  title={Wilcoxon rank sum test drift detector},
+  author={de Barros, Roberto Souto Maior and Hidalgo, Juan Isidro Gonz{\'a}lez and de Lima Cabral, Danilo Rafael},
+  journal={Neurocomputing},
+  volume={275},
+  pages={1954--1963},
+  year={2018},
+  publisher={Elsevier}
+}
