--- a/work2/reports/04-results-and-analysis/04-results-and-analysis.tex
+++ b/work2/reports/04-results-and-analysis/04-results-and-analysis.tex
@@ -12,8 +12,8 @@
 
 \input{04-results-and-analysis/04.2-discussion-knn}
 \input{04-results-and-analysis/04.3-discussion-svm}
-
-\input{04-results-and-analysis/04.4-discussion-reduction}
-\input{04-results-and-analysis/04.5-discussion-summary}
+\input{04-results-and-analysis/04.4-discussion-wilcoxon}
+\input{04-results-and-analysis/04.5-discussion-reduction}
+\input{04-results-and-analysis/04.6-discussion-summary}
 
 
