--- a/work2/reports/03-methods/03.4-methods-statistical-analysis.tex
+++ b/work2/reports/03-methods/03.4-methods-statistical-analysis.tex
@@ -38,7 +38,7 @@ Furthermore, the performance metrics distribution across folds in Figure~\ref{fi
 
 These plots verify that the data does not meet the assumptions of ANOVA:
 
-\paragraph{Non-normal distribution:} Several models show asymmetric distributions, where the median line is not in the middle of the box.
+\paragraph{Non-normal distribution:} Several models show asymmetric distributions (see \autoref{fig:class-distribution-hepatitis}), where the median line is not in the middle of the box.
 Also present are outliers in the data, which are represented as dots outside of the whisker lines.
 
 \paragraph{Unequal variances:} Box sizes vary significantly across models, and some models have much larger spreads than others.
