--- a/work2/reports/04-results-and-analysis/04.2-discussion-knn.tex
+++ b/work2/reports/04-results-and-analysis/04.2-discussion-knn.tex
@@ -6,7 +6,7 @@ This section interprets the results of the KNN algorithm, discussing its perform
 The KNN algorithm was evaluated using several performance metrics, including accuracy, precision, and recall and the f1 score.
 
 \subsubsection*{General Performance Analysis}
-As seen in Tables \ref{tab:knn_results_hepatitis} and \ref{tab:knn_results_mushroom}, the general performance of the KNN algorithm was excellent across both datasets,
+As seen in Tables \ref{tab:knn_results_mushroom} and \ref{tab:knn_results_hepatitis}, the general performance of the KNN algorithm was excellent across both datasets,
 achieving accuracy scores above 92\% and F1 scores above 92.5\% on all top ten configurations.
 
 \subsubsection{Mushroom Dataset Performance}
