--- a/work2/reports/tables/svm_reduction_significant_pairs_mushroom.tex
+++ b/work2/reports/tables/svm_reduction_significant_pairs_mushroom.tex
@@ -2,14 +2,14 @@
 \centering
 \caption{Significant Differences in SVM-Reduction Models for Mushroom}
 \label{tab:svm_reduction_significant_pairs_mushroom}
-\begin{tabular}{rlr}
+\begin{tabular}{lrlr}
 \toprule
-C & Kernel Type & Mean F1 \\
+Reduction Func & C & Kernel Type & Mean F1 \\
 \midrule
-5 & poly & 1.000 \\
-5 & poly & 1.000 \\
-5 & poly & 1.000 \\
-5 & poly & 0.972 \\
+control & 5 & poly & 1.000 \\
+ENNTH & 5 & poly & 1.000 \\
+Drop3 & 5 & poly & 1.000 \\
+GCNN & 5 & poly & 0.972 \\
 \bottomrule
 \end{tabular}
 \end{table}
