add !htbp to tables

--- a/work2/reports/tables/friedman_test_results_hepatitis.tex
+++ b/work2/reports/tables/friedman_test_results_hepatitis.tex
@@ -1,4 +1,4 @@
-\begin{table}
+\begin{table}[!htbp]
 \centering
 \caption{Friedman Test Results Hepatitis}
 \label{tab:friedman_test_results_hepatitis}
@@ -7,13 +7,13 @@
 name & P Value \\
 \midrule
 KNN Top Sample of 8 F1 Scores & 0.9363612898350686 \\
-SVM Top Sample of 8 F1 Scores & 0.002701273415410789 \\
+SVM Top Sample of 8 F1 Scores & 0.002701273415410788 \\
 KNN Linear Sample of 8 F1 Scores & 7.258355849331829e-06 \\
-SVM Linear Sample of 8 F1 Scores & 0.0011830310440603094 \\
-KNN-Reduction Linear Sample of 8 F1 Scores & 0.08210005961379939 \\
-SVM-Reduction Linear Sample of 8 F1 Scores & 0.025373998788786746 \\
-KNN-Reduction Linear Sample of 8 Training Times & 0.00037357398316662427 \\
-SVM-Reduction Linear Sample of 8 Training Times & 5.55598717156124e-06 \\
+SVM Linear Sample of 8 F1 Scores & 0.001183031044060309 \\
+KNN-Reduction Linear Sample of 8 F1 Scores & 0.08210005961379935 \\
+SVM-Reduction Linear Sample of 8 F1 Scores & 0.02537399878878677 \\
+KNN-Reduction Linear Sample of 8 Training Times & 0.00037357398316662454 \\
+SVM-Reduction Linear Sample of 8 Training Times & 5.555987171561241e-06 \\
 \bottomrule
 \end{tabular}
 \end{table}
