--- a/work2/reports/tables/friedman_test_results_mushroom.tex
+++ b/work2/reports/tables/friedman_test_results_mushroom.tex
@@ -1,4 +1,4 @@
-\begin{table}
+\begin{table}[!htbp]
 \centering
 \caption{Friedman Test Results Mushroom}
 \label{tab:friedman_test_results_mushroom}
