--- a/work2/reports/tables/knn_results_mushroom.tex
+++ b/work2/reports/tables/knn_results_mushroom.tex
@@ -1,4 +1,4 @@
-\begin{table}
+\begin{table}[!htbp]
 \centering
 \caption{Results From Knn Models For The Mushroom Dataset}
 \label{tab:knn_results_mushroom}
