--- a/work2/reports/tables/knn_significant_pairs_mushroom.tex
+++ b/work2/reports/tables/knn_significant_pairs_mushroom.tex
@@ -1,4 +1,4 @@
-\begin{table}
+\begin{table}[!htbp]
 \centering
 \caption{Significant Differences in KNN Models for Mushroom}
 \label{tab:knn_significant_pairs_mushroom}
