--- a/work2/reports/tables/svm_reduction_results_hepatitis.tex
+++ b/work2/reports/tables/svm_reduction_results_hepatitis.tex
@@ -1,4 +1,4 @@
-\begin{table}
+\begin{table}[!htbp]
 \centering
 \caption{Results From Svm-Reduction Models For The Hepatitis Dataset}
 \label{tab:svm_reduction_results_hepatitis}
