--- a/work2/reports/tables/svm_reduction_significant_pairs_mushroom.tex
+++ b/work2/reports/tables/svm_reduction_significant_pairs_mushroom.tex
@@ -1,4 +1,4 @@
-\begin{table}
+\begin{table}[!htbp]
 \centering
 \caption{Significant Differences in SVM-Reduction Models for Mushroom}
 \label{tab:svm_reduction_significant_pairs_mushroom}
