--- a/work2/reports/tables/svm_results_mushroom.tex
+++ b/work2/reports/tables/svm_results_mushroom.tex
@@ -1,4 +1,4 @@
-\begin{table}
+\begin{table}[!htbp]
 \centering
 \caption{Results From Svm Models For The Mushroom Dataset}
 \label{tab:svm_results_mushroom}
