--- a/work2/reports/tables/best_knn_and_svm_summary_hepatitis.tex
+++ b/work2/reports/tables/best_knn_and_svm_summary_hepatitis.tex
@@ -1,4 +1,4 @@
-\begin{table}
+\begin{table}[!htbp]
 \centering
 \caption{Best KNN and SVM Models}
 \label{tab:best_knn_and_svm_summary_hepatitis}
@@ -6,7 +6,7 @@
 \toprule
 Model & Mean F1 & Mean Train Time (s) & Mean Test Time (s) \\
 \midrule
-KNN & 0.972618 & 0.000084 & 0.006896 \\
+KNN & 0.972618 & 0.000084 & 0.006925 \\
 SVM & 0.972671 & 0.000885 & 0.000371 \\
 \bottomrule
 \end{tabular}
