--- a/work2/reports/tables/svm_knn_wilcoxon_comparison_hepatitis.tex
+++ b/work2/reports/tables/svm_knn_wilcoxon_comparison_hepatitis.tex
@@ -1,4 +1,4 @@
-\begin{table}
+\begin{table}[!htbp]
 \centering
 \caption{Wilcoxon Signed-Rank Test Results for SVM and KNN Models for Hepatitis}
 \label{tab:svm_knn_wilcoxon_comparison_hepatitis}
