--- a/work2/reports/tables/svm_reduction_significant_pairs_hepatitis.tex
+++ b/work2/reports/tables/svm_reduction_significant_pairs_hepatitis.tex
@@ -1,10 +1,10 @@
-\begin{table}
+\begin{table}[!htbp]
 \centering
 \caption{Significant Differences in SVM-Reduction Models for Hepatitis}
 \label{tab:svm_reduction_significant_pairs_hepatitis}
-\begin{tabular}{rlr}
+\begin{tabular}{lrlr}
 \toprule
-C & Kernel Type & Mean F1 \\
+Reduction Func & C & Kernel Type & Mean F1 \\
 \midrule
 \bottomrule
 \end{tabular}
