--- a/work2/reports/tables/svm_significant_pairs_hepatitis.tex
+++ b/work2/reports/tables/svm_significant_pairs_hepatitis.tex
@@ -1,4 +1,4 @@
-\begin{table}
+\begin{table}[!htbp]
 \centering
 \caption{Significant Differences in SVM Models for Hepatitis}
 \label{tab:svm_significant_pairs_hepatitis}
