--- a/work2/reports/tables/svm_significant_pairs_mushroom.tex
+++ b/work2/reports/tables/svm_significant_pairs_mushroom.tex
@@ -1,4 +1,4 @@
-\begin{table}
+\begin{table}[!htbp]
 \centering
 \caption{Significant Differences in SVM Models for Mushroom}
 \label{tab:svm_significant_pairs_mushroom}
