--- a/work3/notes/2024-11-12.md
+++ b/work3/notes/2024-11-12.md
@@ -1,7 +1,6 @@
-## 2024-11-12 Notes
+# 2024-11-12 Notes
 
-### Project is due 2024-12-08
-
+## Project is due 2024-12-08
 
 * Unsupervised learning
 * Clustering
@@ -40,3 +39,42 @@ Random partition of clusters requires running several times, since it produces d
 
 ### Session 3
 * Validation techniques
+
+## Density-based clustering
+
+* OPTICS is based on DBSCAN
+* In density based clustering we partition points into dense regions separated by not-so-dense regions.
+* DBSCAN: Preliminary concepts
+    * Characterization of points
+        * Epsilon parameter, or ℇ
+            * Density = number of points within a specified radius (Eps)
+            * For any point p, the epsilon defines a distance around the point
+        * MinPts parameter (minimum amount of points)
+            * How many points must be within the ℇ distance of a point p (including the point) to form a cluster
+        * Core points
+            * A point is a core point if it has more than a specified number of points (MinPts) within its ℇ distance (including
+        itself)
+            * These points belong in a dense region and are at the interior of a cluster
+        * Border point
+            * A border point has fewer than MinPts within ℇ, but is in the neighborhood of a core point
+            * Noise point
+        * A noise point is any point that is not a core point or a border point
+    * Parameter estimation
+        * minPts
+            * derived from the number of dimensions D in the data set, as **minPts ≥ D + 1**
+                * minPts = 1 does not make sense, as then every point on its own will already be a cluster
+                * minPts must be chosen at least 3. Larger is better.
+                * larger the dataset, the larger the value of minPts should be chosen
+        * ℇ
+            * value can be chosen by using a k-distance graph
+            * If ℇ is chosen much too small, a large part of the data will not be clustered
+            * If too high value, majority of objects will be in the same cluster
+            * In general, **small values of ℇ are preferable**
+* OPTICS: Ordering Points To Identify the Clustering Structure
+    * Similar to DBSCAN, but they ordered the points
+
+## Graph-based clustering (e.g. Spectral Clustering)
+
+* clustering based on connectivity
+    * Clustering based on the spectrum of the graph
+    * the multiset of the eigenvalues of the Laplacian matrix
