--- a/work3/notes/2024-11-12.md
+++ b/work3/notes/2024-11-12.md
@@ -77,4 +77,18 @@ Random partition of clusters requires running several times, since it produces d
 
 * clustering based on connectivity
     * Clustering based on the spectrum of the graph
-    * the multiset of the eigenvalues of the Laplacian matrix
+        * the multiset of the eigenvalues of the Laplacian matrix
+    * Treats clustering as a graph partitioning problem without making specific assumptions on the form of the clusters
+    * Clusters points using eigenvectors of matrices derived from the data
+    * Maps data to a low-dimensional space that are separated and can be easily clustered
+* Authors disagree:
+    * Which eigenvectors to use
+    * How to derive clusters from these eigenvectors
+* Method 1: Partition using only one eigenvector at a time **<-Probably not for our project**
+    * Use procedure recursively
+    * Example: Image Segmentation
+        * Uses 2nd (smallest) eigenvector to define optimal cut
+        * Recursively generates two clusters with each cut
+* Method 2: Use k eigenvectors (k chosen by user)
+    * Directly compute k-way partitioning
+    * Experimentally has been seen to be “better”
