update TODO and notes

--- a/work3/notes/2024-11-19.md
+++ b/work3/notes/2024-11-19.md
@@ -32,8 +32,11 @@
 * should we use multiple distance metrics?
 * how do we handle mixed categorical and numerical data?
 * should we use feature selection?
+  * no
 * do we need to get approval for the third dataset?
+  * no
 * we are going to change from mushroom dataset since it uses only categorical data
+  * no need, we can continue with mushroom dataset
 
 
 ## Work flow
