--- a/work3/notebooks/0.1-CarlosJimene-preprocessing_dataset.ipynb
+++ b/work3/notebooks/0.1-CarlosJimene-preprocessing_dataset.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
     "     # Extract processed numerical data\n",
     "    processed_numeric_df = pd.DataFrame(processed_array[:, :len(numeric_cols)], columns=numeric_cols)\n",
     "\n",
-    "    # One-hot encode categorical features\n",
+    "    # One-hot encode categorical features (the literature suggests OneHotEcoding for k-means clustering approaches )\n",
     "    encoder = OneHotEncoder(sparse_output=False)  \n",
     "    encoded_array = encoder.fit_transform(processed_array[:, len(numeric_cols):])  # Encode categorical part\n",
     "\n",
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
       "AFTER METHOD\n",
       "categorical columns ['SEX', 'STEROID', 'ANTIVIRALS', 'FATIGUE', 'MALAISE', 'ANOREXIA', 'LIVER_BIG', 'LIVER_FIRM', 'SPLEEN_PALPABLE', 'SPIDERS', 'ASCITES', 'VARICES', 'HISTOLOGY']\n",
       "numeric columns ['AGE', 'BILIRUBIN', 'ALK_PHOSPHATE', 'SGOT', 'ALBUMIN', 'PROTIME']\n",
-      "Error saving DataFrame: 'function' object has no attribute 'to_csv'\n"
+      "DataFrame saved to /home/cajifan/Documents/MAI/1S/IML/mai-intro-to-machine-learning/work3/data/1_preprocessed//hepatitis.csv\n"
      ]
     },
     {
@@ -607,7 +607,7 @@
        "[155 rows x 32 columns]"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,13 +619,13 @@
     "df = dfs[0]\n",
     "\n",
     "preprocessed_df = preprocess_dataset(df)\n",
-    "save_to_csv(preprocess_dataset, f'{PREPROCESSED_DATA_DIR}/hepatitis.csv')\n",
+    "save_to_csv(preprocessed_df, f'{PREPROCESSED_DATA_DIR}/hepatitis.csv')\n",
     "preprocessed_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
       "AFTER METHOD\n",
       "categorical columns ['Train_or_Test', 'Speaker_Number', 'Sex']\n",
       "numeric columns ['Feature_0', 'Feature_1', 'Feature_2', 'Feature_3', 'Feature_4', 'Feature_5', 'Feature_6', 'Feature_7', 'Feature_8', 'Feature_9']\n",
-      "Error saving DataFrame: 'function' object has no attribute 'to_csv'\n"
+      "DataFrame saved to /home/cajifan/Documents/MAI/1S/IML/mai-intro-to-machine-learning/work3/data/1_preprocessed//vowel.csv\n"
      ]
     },
     {
@@ -1022,7 +1022,7 @@
        "[990 rows x 29 columns]"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1033,7 @@
     "df = dfs[0]\n",
     "\n",
     "preprocessed_df = preprocess_dataset(df)\n",
-    "save_to_csv(preprocess_dataset, f'{PREPROCESSED_DATA_DIR}/vowel.csv')\n",
+    "save_to_csv(preprocessed_df, f'{PREPROCESSED_DATA_DIR}/vowel.csv')\n",
     "preprocessed_df"
    ]
   }
