--- a/work3/report/report.tex
+++ b/work3/report/report.tex
@@ -8,8 +8,8 @@
 \usepackage{longtable}
 \bibliographystyle{plain}
 
-\title{Implementation and Evaluation of KNN and SVM Classification Configurations, with Instance Reduction Techniques}
-\author{Zachary Parent, Sheena Lang, Kacper Poniatowski and Carlos Jiménez}
+\title{TITLE}
+\author{Carlos Jiménez, Sheena Lang, Zachary Parent, and Kacper Poniatowski}
 \date{\today}
 
 \begin{document}
