set up the report as 2 column, no table of contents

--- a/work3/report/report.tex
+++ b/work3/report/report.tex
@@ -1,4 +1,4 @@
-\documentclass[titlepage]{article}
+\documentclass[titlepage, twocolumn]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[margin=1in]{geometry}
 \usepackage{booktabs}
@@ -16,7 +16,6 @@
 
 \maketitle
 
-\tableofcontents
 \newpage
 \input{01-introduction}
 \newpage
