--- a/work3/report/report.tex
+++ b/work3/report/report.tex
@@ -17,17 +17,17 @@
 \maketitle
 
 \newpage
-\input{01-introduction}
+\input{1-introduction}
 \newpage
-\input{02-data/02-data}
+\input{2-data/data}
 \newpage
-\input{03-methods/03-methods}
+\input{3-methods/methods}
 \newpage
-\input{04-results-and-analysis/04-results-and-analysis}
+\input{4-results-and-analysis/results-and-analysis}
 \newpage
-\input{05-conclusion}
+\input{5-conclusion}
 \newpage
 \bibliography{references}
 \newpage
-\input{06-appendix}
+\input{6-appendix}
 \end{document}
